2001-03-30  Katsumi Yamaoka  <yamaoka@jpl.org>

	* w3m-hist.el (w3m-history-rename-url): New function.
	(w3m-history-remove-properties, w3m-history-add-properties):
	(w3m-history-plist-put, w3m-history-plist-get): New functions.
	(w3m-history-assoc): Return a history element of `w3m-history-flat'
	instead of `w3m-history'.

2001-03-30  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el (w3m-w3m-attributes): Fixed spec of return value when
	response code is greater than 500.

2001-03-29  TSUCHIYA Masatoshi  <tsuchiya@pine.kuee.kyoto-u.ac.jp>

	* w3m.el: Fix bugs in caching deflated contents.
	(w3m-attributes): Fixed spec of return value when `about:' is
	specified.
	(w3m-cache-available-p): Removed.
	(w3m-w3m-dump-head-source): Reconstructed.
	(w3m-w3m-dump-source): New function.
	(w3m-w3m-retrieve): Use `w3m-w3m-dump-head-source' or `w3m-w3m-dump-source'.
	(w3m-real-url): Fix side effect of macro expansion.

	* w3m-0.2.1-mnc.patch: New file.

2001-03-29  Katsumi Yamaoka  <yamaoka@jpl.org>

	* Makefile.in (default): Replace with `fast'.
	(install): Undo the last change.
	(.el.elc, .SUFFIXES, install-anyway): Removed.
	(fast-install-package, fast-install, fast): Removed.

	* w3m-hist.el (w3m-hist): Provide as a feature.
	(w3m-history-copy, w3m-history-copy-1): New functions.
	(w3m-history-push): Handle the variable `w3m-history-flat' as well
	as `w3m-history'.
	(w3m-history-assoc): Ditto.
	(w3m-history-flat function): Set the value of the variable
	`w3m-history-flat'.
	(w3m-history-flat variable): New buffer-local variable.
	(The whole module): Replace the term ATTRIBUTES with PROPERTIES;
	replace the symbol name of the variable `w3m-url-history' with
	`w3m-history'.

2001-03-29  Hideyuki SHIRAI  <shirai@meadowy.org>

	* w3m.el (w3m-real-url): Return original url when real url is nil.

	* w3m-antenna.el (w3m-antenna-sites): Add 'time' type.
	(w3m-antenna-alist): Modify comment.
	(w3m-antenna-hns-last-modified): Don't use old 'Last-Modified:'
	format.